# ms-detours-cmake

./: CMakeLists.txt  Readme.md
cmake/: cpm.cmake
